added chat and profile picture

--- a/frontend_project2/WebContent/index.html
+++ b/frontend_project2/WebContent/index.html
@@ -24,9 +24,11 @@
     <ul class="nav navbar-nav">
       <li><a href="#/registration" ng-hide="currentUser.firstname">Register</a></li>
 						<li><a href="#/login" ng-hide="currentUser.firstname">Login</a></li>
+						<li><a href="#/profilepic" ng-show=currentUser.username><img src="http://localhost:8080/backend_project2/getimage/{{currentUser.username}}" alt="Upload image" width="30px" height="30px" class="img-rounded"></a></li>
 						<li><a href="#/savejob" ng-show="currentUser.role=='Admin'">Save Job Details</a></li>
 						<li><a href="#/getalljobs" ng-show="currentUser.firstname">GetAllJobs</a></li>
 						<li><a href="#/getallblogs" ng-show="currentUser.firstname">View Blogs</a></li>
+						<li><a href="#/edituserprofile">Edit Profile</a></li>
       
     </ul>
     <ul class="nav navbar-nav navbar-right">
@@ -34,6 +36,7 @@
       <li><a href="#/suggestedusers" ng-show="currentUser.firstname">Friend Suggestions</a></li>
       <li><a href="#/pendingrequests" ng-show="currentUser.firstname">Pending Requests</a></li>
       <li><a href="#/listoffriends" ng-show="currentUser.firstname">Friends</a></li>
+      <li><a href="#/chat" ng-show="currentUser.username">Chat</a></li>
 					
 					    <li><a href="" ng-show="currentUser.firstname">Welcome {{currentUser.firstname}} &nbsp; {{currentUser.lastname}} </a></li>
 						<li><a href="" ng-click="logout()"ng-show="currentUser.firstname">logout</a></li>
