Added dependency to index and made changes to message and wall

--- a/frontend_project2/WebContent/index.html
+++ b/frontend_project2/WebContent/index.html
@@ -72,7 +72,7 @@
     <script type="text/javascript" src="services/friendservice.js"></script>
     <script type="text/javascript" src="controller/friendcontroller.js"></script>
     <script type="text/javascript" src="controller/wallcontroller.js"></script>
-    
+   <script src="js/sockjs/sockjs.js"></script>
     <script src="js/stomp/dist/stomp.js"></script>
     <script type="text/javascript" src="controller/chatcontroller.js"></script>
     <script type="text/javascript" src="services/chatservice.js"></script>
